Доделка Решения основного задания 9. Чётные деревья и леса